tests/golden/errors/key_error.py
{"answer": 41}["missing"]
